<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.MainActivity">


    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/welcome_txt" />

    <Button
        android:id="@+id/add_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user_txt" />

    <Button
        android:id="@+id/add_bp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_bp_txt" />

    <Button
        android:id="@+id/view_bp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_bp_txt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:text="@string/view_recent_data"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/view_recent_data" />

    <TextView
        android:id="@+id/Systolic_txt"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Diastolic_txt"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/GraphicalViewBtn"
        android:layout_width="113dp"
        android:layout_height="105dp"
        android:src="@drawable/img"
        tools:srcCompat="@tools:sample/avatars" />
</LinearLayout>
